--- a/semana_01/[SP01] - Ex 2 - Utilizando imagens/index.html
+++ b/semana_01/[SP01] - Ex 2 - Utilizando imagens/index.html
@@ -27,7 +27,7 @@ Dica: https://www.w3schools.com/html/html_images.asp -->
 <body>
     <h1>Semana 1</h1>
     <hr>
-    <p>Este é o resultado do primeiro exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
+    <p>Este é o resultado do segundo exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
 </body>
 
 </html>
