--- a/semana_01/[SP01] - Ex 3 - Adicione estilos/index.html
+++ b/semana_01/[SP01] - Ex 3 - Adicione estilos/index.html
@@ -28,7 +28,7 @@ Dica: https://www.w3schools.com/css/css_howto.asp -->
 <body>
     <h1>Semana 1</h1>
     <hr>
-    <p>Este é o resultado do primeiro exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
+    <p>Este é o resultado do terceiro exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
 </body>
 
 </html>
