--- a/semana_01/[SP01] - Ex 9 - Pseudo-classes e transições/index.html
+++ b/semana_01/[SP01] - Ex 9 - Pseudo-classes e transições/index.html
@@ -35,7 +35,7 @@ Dica: 🔍🌐🤭 -->
 
     <h1>Semana 1</h1>
     <hr>
-    <p>Este é o resultado do primeiro exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
+    <p>Este é o resultado do nono exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
     <a href="imagens.html"><img src="imagem1.png" alt="Hello Kitty com presente"></a>
     <h2>Giga pudding</h2>
     <p>Comercial japonês de pudim gigante. Muito engraçado!</p>
