--- a/semana_01/[SP01] - Ex 4 - Links e bordas/index.html
+++ b/semana_01/[SP01] - Ex 4 - Links e bordas/index.html
@@ -30,7 +30,7 @@ Dica: https://www.w3schools.com/css/css_boxmodel.asp-->
 <body>
     <h1>Semana 1</h1>
     <hr>
-    <p>Este é o resultado do primeiro exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
+    <p>Este é o resultado do quarto exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
     <a href="imagens.html"><img src="imagem1.png" alt="Hello Kitty com presente"></a>
 
 </body>
