--- a/semana_01/[SP01] - Ex 6 - Lado a lado/index.html
+++ b/semana_01/[SP01] - Ex 6 - Lado a lado/index.html
@@ -26,7 +26,7 @@ Dica: https://www.w3schools.com/howto/howto_css_images_side_by_side.asp -->
 <body>
     <h1>Semana 1</h1>
     <hr>
-    <p>Este é o resultado do primeiro exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
+    <p>Este é o resultado do sexto exercício<br> da primeira semana<br> do curso DEVinHouse. &#x1F602</p>
     <a href="imagens.html"><img src="imagem1.png" alt="Hello Kitty com presente"></a>
 
 </body>
