--- a/semana_03/[M1S03] - Ex 1 - Calcule automaticamente a idade/index.html
+++ b/semana_03/[M1S03] - Ex 1 - Calcule automaticamente a idade/index.html
@@ -9,7 +9,7 @@ Faça uma página HTML contendo um label que exiba a mensagem “Insira sua data
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Módulo 1 Semana 3 Exercício 1</title>
+    <title>DEVinHouse Softplan</title>
 
     <link rel="stylesheet" href="styles/style.css" />
 
@@ -20,13 +20,18 @@ Faça uma página HTML contendo um label que exiba a mensagem “Insira sua data
 
         <h1>Semana 3 - Exercício 1</h1>
 
-        <label for="dataNascimento">Insira sua data de nascimento: </label>
-        <input type="date" id="dataNascimento"/>
+        <!-- Inserindo label -->
+        <label>Insira sua data de nascimento: </label>
+        <br>
 
-        <button id="button">Calcular idade</button>
+        
+        <input type="date" name="dateBirth" id="dataNascimento"/>
+
+        <button onclick="calcular()">Calcular idade</button>
 
     </main>
 
+    <!-- CONFERIR SCRIPTS -->
     <script src="scripts/script.js"></script>
 
 </body>
