--- a/semana_03/[M1S03] - Ex 1 - Calcule automaticamente a idade/index.html
+++ b/semana_03/[M1S03] - Ex 1 - Calcule automaticamente a idade/index.html
@@ -31,8 +31,7 @@ Faça uma página HTML contendo um label que exiba a mensagem “Insira sua data
 
     </main>
 
-    <!-- CONFERIR SCRIPTS -->
-    <script src="scripts/script.js"></script>
+    <script src="scripts/script.js" defer></script>
 
 </body>
 
