--- a/2021_11_04/home.html
+++ b/2021_11_04/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM - getElementById</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -87,7 +88,6 @@
     </main>
     <footer>
         </foter>
-        <script src="scripts/script.js"></script>
 </body>
 
 </html>
