--- a/projeto_1/index.html
+++ b/projeto_1/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>To-Do List</title>
 
+    <link rel="shortcut icon" href="/images/favicon.ico" />
     <link rel="stylesheet" href="styles/style.css" />
-
+    <script src="scripts/script.js" defer></script>
 </head>
 
-
 <body>
-
     <header>
         <h1>To-Do List</h1>
     </header>
 
     <main>
 
+        <label for="novaAtividade">Nova atividade: </label>
 
+        <input type="text" id="novaAtividade" placeholder="Digite uma nova atividade" onfocus="this.value=''"/>
 
+        <button id="inserir"> Inserir! </button>
 
-    <script src="scripts/script.js" defer></script>
+        <div id="lista"></div>
 
     </main>
 </body>
+
 </html>
